# music_server

./: .gitignore  CMakeLists.txt  vcpkg.json
.github/workflows/: cmake.yml
cmake/: FindODB.cmake  FindSDL2.cmake  UseODB.cmake
src/: CMakeLIsts.txt
src/libs/: CMakeLIsts.txt
src/libs/filesystem/: CMakeLists.txt
src/libs/filesystem/impl/: FileSystemWrapper.cpp  IFileSystem.cpp  PrimitiveFileSystem.cpp
src/libs/filesystem/include/filesystem/: FileSystemWrapper.h  IFileSystem.h  PrimitiveFileSystem.h
src/libs/filesystem/test/: CMakeLists.txt  fs_test.cpp
src/libs/metadata/: CMakeLists.txt
src/libs/metadata/impl/: IParser.cpp  TagLib.cpp
src/libs/metadata/include/metadata/: IParser.h  TagLib.h
src/libs/metadata/test/: CMakeLists.txt  cmake_data.h.in  metadata_test.cpp
src/libs/services/: CMakeLIsts.txt
src/libs/services/database/: CMakeLists.txt
src/libs/services/database/impl/: Album.cpp  Artist.cpp  Directory.cpp  Image.cpp  Lyric.cpp  Track.cpp  Url.cpp  Year.cpp
src/libs/services/database/include/services/database/: Album.h  Artist.h  Directory.h  Genre.h  Image.h  Lyric.h  Playlist.h  Track.h  Url.h  UserAccount.h  UserRole.h  Utils.h  Year.h
src/libs/services/network/: CMakeLists.txt
src/libs/services/network/impl/: ConnectionManager.cpp  IConnection.cpp  connection.cpp  message.cpp  messagehandles.cpp  proccessmessage.cpp  proxy.cpp  ratecontroller.cpp  sendqueue.cpp  server.cpp  session.cpp  tcpconnection.cpp
src/libs/services/network/include/services/network/: ConnectionManager.h  Constants.h  IConnection.h  connection.h  iproccessmessage.h  message.h  messagehandles.h  proccessmessage.h  proxy.h  ratecontroller.h  sendqueue.h  server.h  session.h  tcpconnection.h
src/libs/services/network/test/: CMakeLists.txt  connection_test.cpp  connection_test.h  main.cpp  message_test.cpp  testcollector.cpp  testcollector.h  testcollector.h.bak
src/libs/utils/: CMakeLists.txt  cmake_data.h.in  config.h.in
src/libs/utils/impl/: Image.cpp  QtLogger.cpp  Utils.cpp  error_image.cpp
src/libs/utils/include/utils/: QtLogger.h  Services.h  Utils.h  config.h.in.bak  error_image.h
src/libs/utils/test/: CMakeLists.txt  image_test.cpp  resources.qrc
src/server/: CMakeLists.txt  main.cpp  server.vcxproj  server.vcxproj.filters
src/server/impl/: server.cpp
